Changed SimEngine to use ProcessBuilder