@@ -2,17 +2,19 @@ package simulation;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import unit.UnitHandler;
-import unit.UnitLogger;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Scanner;
+import java.util.concurrent.TimeUnit;
 
 public class SimEngine implements Runnable {
 
     private Logger logger = LoggerFactory.getLogger(SimEngine.class);
+
+    private volatile boolean keepalive;
     private volatile boolean running;
     private Process process;
 
@@ -21,6 +23,7 @@ public class SimEngine implements Runnable {
     }
 
     public void init() {
+        this.keepalive = true;
         this.running = true;
         Thread thread = new Thread(this);
         thread.start();
@@ -28,34 +31,92 @@ public class SimEngine implements Runnable {
 
     @Override
     public void run() {
-        String vrfBin64 = System.getenv("MAK_VRFDIR64") + "/bin64/";
-        String fedFile = "RPR_FOM_v2.0_1516-2010.xml";
-        String scenarioPath = "C:/MAK/vrforces4.5/userData/scenarios/it3903/follow_time-constrained-run-to-complete.scnx";
+        String vrfDir = System.getenv("MAK_VRFDIR64");
+        String vrfBin64 = vrfDir + "/bin64/";
+        String scenarioPath = vrfDir + "/userData/scenarios/it3903/follow_time-contrained-earth.scnx";
 
-        String core = "cmd /c vrfSimHLA1516e.exe --appNumber 3001 --siteId 1 --timeManagement --execName rlo --fedFileName " + fedFile;
-        String scenario = " --scenarioFileName " + scenarioPath;
-        String fomModules = " --fomModules MAK-VRFExt-1_evolved.xml --fomModules MAK-DIGuy-2_evolved.xml --fomModules MAK-LgrControl-1_evolved.xml --fomModules MAK-VRFAggregate-1_evolved.xml --fomModules MAK-DynamicTerrain-1_evolved.xml --fomModules LLBML_v2_6.xml";
-        String plugins = " --loadPlugin LLBMLSimHLA1516e_VC10.dll";
-        String rprVersion = " --rprFomVersion 2.0";
-        String cmd = core + scenario + fomModules + rprVersion + plugins;
+        String executable = vrfBin64 + "vrfSimHLA1516e.exe";
+        String appNr = "--appNumber 3001";
+        String siteId = "--siteId 1";
+        String timeManagement = "--timeManagement";
+        String fedName = "--execName rlo";
+        String fedFile = "--fedFileName RPR_FOM_v2.0_1516-2010.xml";
+        String scenario = "--scenarioFileName " + scenarioPath;
+        String rprVersion = "--rprFomVersion 2.0";
+        String plugins = "--loadPlugin LLBMLSimHLA1516e_VC10.dll";
+        String runMode = "--startInRunMode";
+
+        ArrayList<String> fomModules = new ArrayList<>();
+        fomModules.add("--fomModules MAK-VRFExt-1_evolved.xml");
+        fomModules.add("--fomModules MAK-DIGuy-2_evolved.xml");
+        fomModules.add("--fomModules MAK-LgrControl-1_evolved.xml");
+        fomModules.add("--fomModules MAK-VRFAggregate-1_evolved.xml");
+        fomModules.add("--fomModules MAK-DynamicTerrain-1_evolved.xml");
+        fomModules.add("--fomModules LLBML_v2_6.xml");
+
+        ArrayList<String> processParams= new ArrayList<>();
+        processParams.addAll(Arrays.asList(executable, appNr, siteId, timeManagement, fedName, fedFile, scenario));
+        processParams.addAll(fomModules);
+        processParams.addAll(Arrays.asList(rprVersion, plugins, runMode));
 
         try {
-            logger.info("Running simulation engine with command: " + cmd);
-            process = Runtime.getRuntime().exec(cmd, null, new File(vrfBin64));
+            logger.info("Running simulation engine with parameters: " + paramsToString(processParams));
+            ProcessBuilder processBuilder = new ProcessBuilder(processParams);
+            processBuilder.directory(new File(vrfBin64));
+            process = processBuilder.start();
 
-            BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            final Thread consoleOutputThread = new Thread(() -> {
+                try {
+                    final BufferedReader reader = new BufferedReader(
+                            new InputStreamReader(process.getInputStream()));
+                    String line;
+                    while ((line = reader.readLine()) != null || running) {
+                        logger.info(line);
+                    }
+                    reader.close();
+                } catch (final Exception e) {
+                    e.printStackTrace();
+                }
+            });
+            consoleOutputThread.start();
 
-            // Todo replace with thread
-            while (running) {
-                logger.info(bufferedReader.readLine());
+            while (keepalive) {
             }
-            process.destroy();
+            try {
+                TimeUnit.SECONDS.sleep(25);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            System.out.println("keepalive false");
+            BufferedWriter bufferedWriter = new BufferedWriter(new OutputStreamWriter(process.getOutputStream()));
+            bufferedWriter.write("q\n");
+            bufferedWriter.flush();
+            bufferedWriter.close();
+            System.out.println("sending shutdown command complete");
+
+
+//            this.running = false;
+//            process.destroy();
+//            bufferedReader.close();
+
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    void destroy() {
-        this.running = false;
+    private String paramsToString(List<String> params) {
+        StringBuilder stringBuilder = new StringBuilder();
+        for (int i = 0; i < params.size() - 1; i++) {
+            stringBuilder.append(params.get(i));
+            stringBuilder.append(" ");
+        }
+        stringBuilder.append(params.get(params.size() - 1));
+        return stringBuilder.toString();
     }
+
+    void destroy() {
+        logger.info("Destroying simulation engine.");
+        this.keepalive = false;
+    }
+
 }
